--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-title: Travel Blog
-header-img: img/home-bg.jpg
+title: Megan and Grant's Adventures
+header-img: img/MonteSano.jpg
 email: megkearl@gmail.com
-copyright_name: Your/Project/Corporate Name
-description: "Write your site description here. It will be used as your sites meta description as well!"
-baseurl: "/travel-blog"
-url: "http://yourdomain.com"
+copyright_name: Grant and Megan
+description: "Megan and Grant's Travel Adventures"
+baseurl: "/adventures"
+url: "http://adventures.meganandgrant.com"
 twitter_username: makearl
 github_username:  makearl
 #facebook_username:  StartBootstrap
@@ -13,7 +13,7 @@ email_username:  megkearl@gmail.com
 
 # Google Analytics
 # To enable google analytics, uncomment below line with a valid Google Tracking ID
-# google_tracking_id:
+google_tracking_id: UA-87819650-1
 
 # Build settings
 markdown: kramdown
